fixing title/subtitle spacing in title header

--- a/css/style.css
+++ b/css/style.css
@@ -123,6 +123,8 @@ section#section-.normal {
     width: 100vw;
     position: relative;
     left: calc(-50vw + 50%);
+    top: -25px;
+    padding-bottom: 25px;
     background-image: url("../images/title-background-white.png");
     background-color: #1aa9ab;
     background-repeat: no-repeat;
@@ -154,8 +156,6 @@ section#section-.normal {
 #header h1.title, #header p.author, #header p.date, #header h2.subtitle { /* white/generic header text specs */
     font-family: calluna, serif;
     color: #fff;
-    position: relative;
-    top: -25px;
     margin: auto;
     max-width: 670px;
     text-shadow: 4px 4px 10px rgba(0, 0, 0, 10%);
@@ -170,11 +170,11 @@ section#section-.normal {
 }
 
 #header h1.title { /* generic title text specs */
-    padding: calc(1em + 25px) 0 0 .5em;
+    padding: calc(1em + 25px) .5em .4em .5em;
+    margin-bottom: 0;
     border: none;
     text-transform: none;
     font-size: 4rem;
-    letter-spacing: .03em;
 }
 
 #header h2.subtitle > em { /* remove generic italics from subtitle, but leave inline specified italics */
@@ -183,10 +183,13 @@ section#section-.normal {
 
 #header h2.subtitle {
     font-size: 2rem;
+    font-weight: 400;
+    position: relative;
+    top: -.3em;
     border: none;
     padding-left: 1.2em;
+    padding-right: 1em;
     letter-spacing: inherit;
-    margin-top: .5em;
     margin-bottom: .5em;
 }
 
@@ -202,6 +205,7 @@ section#section-.normal {
     letter-spacing: .05em;
     text-align: right;
     margin: auto;
+    padding-left: 1.5em;
     padding-right: .4em;
     padding-bottom: 1.1em;
 }
@@ -249,7 +253,7 @@ h1 {
 	/*all small caps*/
 	text-transform: lowercase;
 	font-variant: small-caps;
-	letter-spacing:.1em;
+	letter-spacing: .03em;
 	/*opentype asc*/
 	/*font-variant-caps: all-small-caps;
 	-moz-font-feature-settings: "smcp";
